# AcademDRM-Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
client/: crypto_verify.cpp  crypto_verify.hpp  hardware_id.cpp  license_client.cpp  license_client.hpp  main.cpp
client/include/drm/: bytecode_compiler.hpp  hardware_id.hpp  protected_logic.hpp  startup_protections.hpp  string_obfuscation.hpp  virtual_machine.hpp
client/include/drm/security/: startup_protections.hpp
client/include/drm/vm/: bytecode_compiler.hpp
client/protected/: donut_animation.cpp
client/src/: crypto_verify.cpp  hardware_id.cpp  license_client.cpp  main.cpp
ctf/ghost_license/challenge/: hints.txt  readme.txt
ctf/ghost_license/setup/: build_instructions.txt  generate_release.ps1
ctf/ghost_license/source/: CMakeLists.txt  license_check.cpp  license_check.h  main.cpp
ctf/ghost_license/writeup/: Ghost License.md
server/: app.py
